force-app/main/default/objects/lightningbuddy__Url_Path_Mapping__mdt/fields/lightningbuddy__Object__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Object__c</fullName>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>