force-app/main/default/objects/lightningbuddy__Url_Path_Mapping__mdt/fields/lightningbuddy__Query_String__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Query_String__c</fullName>
    <label>Query String</label>
    <length>80</length>
    <type>Text</type>
</CustomField>