force-app/main/default/objects/lightningbuddy__Url_Path_Mapping__mdt/fields/lightningbuddy__Url__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Url__c</fullName>
    <label>Url</label>
    <length>80</length>
    <type>Text</type>
</CustomField>