force-app/main/default/objects/lightningbuddy__Url_Path_Mapping__mdt/listViews/lightningbuddy__All_with_Paths.listView-meta.xml
<ListView>
    <fullName>lightningbuddy__All_with_Paths</fullName>
    <columns>lightningbuddy__Object__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>lightningbuddy__Url__c</columns>
    <columns>lightningbuddy__Query_String__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Paths</label>
</ListView>